fix legend of bar chart